# configator-op

./: .gitignore  .justfile  .zizmor.yml  ADRs.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  skylos.yml  zizmor.yml
src/configator/: __init__.py  core.py  log.py  models.py
tests/: test_core.py  test_e2e.py  test_models.py
